Updated Consent Credential model

--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -4839,8 +4839,9 @@ font-style: italic;
     <div class="field-items">
       <div class="param">activeFrom </div><div class="param-desc"><span class="param-type"><a href="#integer">Integer</a></span> Active from date time stamp. format: Unix time in ms</div>
 <div class="param">activeUntil </div><div class="param-desc"><span class="param-type"><a href="#integer">Integer</a></span> Active until date time stamp. format: Unix time in ms, nullable</div>
-<div class="param">token </div><div class="param-desc"><span class="param-type"><a href="#ConsentAccessTokenModel">ConsentAccessTokenModel</a></span> Access token. </div>
+<div class="param">publishedProviderUrl (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> The publishedProviderUrl of the Service Provider that will use the credential. format: url</div>
 <div class="param">state </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> State of the credential. </div>
+<div class="param">token </div><div class="param-desc"><span class="param-type"><a href="#ConsentAccessTokenModel">ConsentAccessTokenModel</a></span> Access token. </div>
     </div>  <!-- field-items -->
   </div>
   <div class="model">
