--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -1109,8 +1109,8 @@ font-style: italic;
 
     <h3 class="field-label">Return type</h3>
     <div class="return-type">
+      <a href="#ConnectTokensModel">ConnectTokensModel</a>
       
-      ConnectTokensResponseModel
     </div>
 
     <!--Todo: process Response Object and its headers, schema, examples -->
@@ -1129,7 +1129,7 @@ font-style: italic;
     <h3 class="field-label">Responses</h3>
     <h4 class="field-label">200</h4>
     The status code of a success response will be 200.
-        <a href="#ConnectTokensResponseModel">ConnectTokensResponseModel</a>
+        <a href="#ConnectTokensModel">ConnectTokensModel</a>
   </div> <!-- method -->
   <hr/>
   <h1><a name="Consent">Consent</a></h1>
