--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -981,8 +981,8 @@ font-style: italic;
 
     <h3 class="field-label">Return type</h3>
     <div class="return-type">
+      <a href="#ConnectTokenModel">ConnectTokenModel</a>
       
-      ConnectTokenDataModel
     </div>
 
     <!--Todo: process Response Object and its headers, schema, examples -->
@@ -1001,7 +1001,7 @@ font-style: italic;
     <h3 class="field-label">Responses</h3>
     <h4 class="field-label">200</h4>
     The status code of a success response will be 200.
-        <a href="#ConnectTokenDataModel">ConnectTokenDataModel</a>
+        <a href="#ConnectTokenModel">ConnectTokenModel</a>
   </div> <!-- method -->
   <hr/>
   <div class="method"><a name="connectTokenUrlPatch"/>
@@ -3492,8 +3492,8 @@ font-style: italic;
 
     <h3 class="field-label">Return type</h3>
     <div class="return-type">
+      <a href="#ConnectTokenModel">ConnectTokenModel</a>
       
-      ConnectTokenDataModel
     </div>
 
     <!--Todo: process Response Object and its headers, schema, examples -->
@@ -3512,7 +3512,7 @@ font-style: italic;
     <h3 class="field-label">Responses</h3>
     <h4 class="field-label">200</h4>
     The status code of a success response will be 200.
-        <a href="#ConnectTokenDataModel">ConnectTokenDataModel</a>
+        <a href="#ConnectTokenModel">ConnectTokenModel</a>
   </div> <!-- method -->
   <hr/>
   <div class="method"><a name="connectionUrlGet"/>
