Updated Connect Token model

--- a/qiy-node-api.html
+++ b/qiy-node-api.html
@@ -5530,9 +5530,7 @@ font-style: italic;
 <div class="param">note (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Note </div>
 <div class="param">useBudget (optional)</div><div class="param-desc"><span class="param-type"><a href="#integer">Integer</a></span> Maximum number of use times </div>
 <div class="param">actions (optional)</div><div class="param-desc"><span class="param-type"><a href="#ConnectTokenMetadataModel_actions">ConnectTokenMetadataModel_actions</a></span>  </div>
-<div class="param">target </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> The <a href="https://github.com/qiyfoundation/Qiy-Scheme/blob/topic/qiy-node-interface/Qiy%20Node%20Protocol.md#transport-connect-token">Transport Connect Token</a>. </div>
-<div class="param">identifier (optional)</div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> This property is only used in responses and holds the alias. </div>
-<div class="param">tmpSecret </div><div class="param-desc"><span class="param-type"><a href="#string">String</a></span> Base64-encoded temporary secret. format: Base64-encoded</div>
+<div class="param">json (optional)</div><div class="param-desc"><span class="param-type"><a href="#ConnectTokenJsonModel">ConnectTokenJsonModel</a></span>  </div>
     </div>  <!-- field-items -->
   </div>
   <div class="model">
