--- a/Qiy-Node/openapi.html
+++ b/Qiy-Node/openapi.html
@@ -6,6 +6,7 @@
 
             function render() {
                 var ui = SwaggerUIBundle({
+		    tagssSorter: "alpha",
                     url:  "https://raw.githubusercontent.com/qiyfoundation/Qiy-Scheme/review-board/Qiy-Node/openapi.yaml",
                     dom_id: '#swagger-ui',
 		    deepLinking: true,
