--- a/Qiy-Node/openapi.html
+++ b/Qiy-Node/openapi.html
@@ -8,9 +8,13 @@
                 var ui = SwaggerUIBundle({
                     url:  "https://raw.githubusercontent.com/qiyfoundation/Qiy-Scheme/review-board/Qiy-Node/openapi.yaml",
                     dom_id: '#swagger-ui',
+		    deepLinking: true,
                     presets: [
                         SwaggerUIBundle.presets.apis,
                         SwaggerUIBundle.SwaggerUIStandalonePreset
+                    ],
+                    plugins: [
+                      SwaggerUIBundle.plugins.DownloadUrl
                     ]
                 });
             }
@@ -22,3 +26,4 @@
         <div id="swagger-ui"></div>
     </body>
 </html>
+
