--- a/Qiy-Node/Client/openapi.html
+++ b/Qiy-Node/Client/openapi.html
@@ -7,7 +7,7 @@
             function render() {
                 var ui = SwaggerUIBundle({
 		    tagsSorter: "alpha",
-                    url:  "https://raw.githubusercontent.com/qiyfoundation/Qiy-Scheme/review-board/Qiy-Node/Client/openapi.yaml",
+                    url:  "openapi.yaml",
                     dom_id: '#swagger-ui',
 		    deepLinking: true,
                     presets: [
